--- a/src/main/webapp/WEB-INF/ui/views/datasource/list.html
+++ b/src/main/webapp/WEB-INF/ui/views/datasource/list.html
@@ -1,6 +1,6 @@
 <h2>
-        Uživatel <a class="btn btn-primary pull-right" href="#/datasource/new"><i
-                class="icon-plus-sign icon-white"></i> Nový uživatel</a>
+        Zdroje dat <a class="btn btn-primary pull-right" href="#/datasource/new"><i
+                class="icon-plus-sign icon-white"></i> Nový zdroj</a>
                 List
 </h2>
 <table class="table table-striped">
