--- a/src/main/webapp/WEB-INF/ui/views/datasource/edit.html
+++ b/src/main/webapp/WEB-INF/ui/views/datasource/edit.html
@@ -1,64 +1,66 @@
 <div ng-controller="DataSourceCreateController">
-<div class="modal-header">
-    <h3>Datový zdroj</h3>
-</div>
-<div class="modal-body">
-
-
-        <div class="row">
+    <div class="modal-header">
+        <h3 style="">Datový zdroj</h3>
+    </div>
+    <div class="modal-body ">
+        <div>
             <form novalidate class="form-horizontal" ng-submit="save()" name="dataSource"  >
-                <div class="col-md-6">
-                    <div class="control-group">
+                <div class="row">
+                    <div class="col-md-2">
                         <input type="hidden" ng-model="DataSource.id" id="id" name="id" />
-                    </div>
-                    <div class="control-group">
-                        <label class="control-label" for="name">Název</label>
-                        <div class="controls">
+
+                        <div class="form-group">
+                            <label class="control-label" for="name">Název</label>
                             <input type="text" id = "name" name="name" ng-model="DataSource.name"  interpol-model="name" server-error="name"/>
                             <div class="errors"  show-inter="name" >
                                 <error-message error="name" ></error-message>   
+
                             </div>
-                        </div>
-                    </div>  
-            
+                        </div>  
+                        <h4 style="">Pole</h4>
+                        <div ng-repeat="f in DataSource.dataStructure.dataStructureFields">
+                            <div class="form-group">
+                                <label class="control-label" for="dataStructure.dataStructureFields{{f.index}}.name">Pole {{f.index}}</label>
 
-                    <input type="file" ng-model="files" file-change>
-               
-
-                </div>
-                <div class="col-md-6">
-                    <div ng-repeat="f in DataSource.dataStructure.dataStructureFields">
-                        <div class="control-group">
-                            <label class="control-label" for="dataStructure.dataStructureFields{{f.index}}.name">Pole {{f.index}}</label>
-                            <div class="controls">
                                 <input type="text" id = "dataStructure.dataStructureFields{{f.index}}.name" name="dataStructure.dataStructureFields[{{f.index}}].name" ng-model="f.name"  interpol-model="dataStructure.dataStructureFields[{{f.index}}].name" server-error="dataStructure.dataStructureFieldsCollection[{{f.index}}].name"/>
                                 <div class="errors"  style="height: 1em;" show-inter="dataStructure.dataStructureFields[{{f.index}}].name" >
                                     <error-message error="dataStructure.dataStructureFields[{{f.index}}].name" ></error-message>   
                                 </div>
+
                             </div>
+
                         </div>
 
-                    </div>
 
+
+                    </div>
+                    <div class="col-md-10">
+                        <div class="form-group">
+                            <input type="file" ng-model="files" file-change id="file" >
+                            <div ng-show="loadingfile">
+                                Loading...
+                            </div>
+                        </div>
+                                           <h4 style="">Náhled dat</h4>
+                        <table class="table table-striped table-condensed table-bordered" style="font-size: 0.9em;">
+                            <thead>
+                            <th ng-repeat="f in DataSource.dataStructure.dataStructureFields">
+                                {{f.name}}
+                            </th>
+                            </thead>
+
+                            <tr ng-repeat="row in DataSource.dataStructure.previewRows" >
+                                <td ng-repeat="field in row.dataSourceFields" >
+                                    {{ field.value | format : DataSource.dataStructure.dataStructureFields[field.index].dataType }}
+                                </td>
+                            </tr>
+                        </table>
+                    </div>
                 </div>
+
             </form>
         </div>
-        <div class="row">
-            <table class="table table-striped">
-                <thead>
-                <th ng-repeat="f in DataSource.dataStructure.dataStructureFields">
-                    {{f.name}}
-                </th>
-                </thead>
 
-                <tr ng-repeat="row in DataSource.dataStructure.previewRows" >
-                    <td ng-repeat="field in row.dataSourceFields" >
-                        {{ field.value | format : DataSource.dataStructure.dataStructureFields[field.index].dataType }}
-                    </td>
-                </tr>
-            </table>
-
-        </div>
 
 
 
@@ -69,9 +71,9 @@
 
     </div>
 
-<div class="modal-footer">
-    <button class="btn btn-primary" ng-click="ok()">OK</button>
-    <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
-</div>
+    <div class="modal-footer">
+        <button class="btn btn-primary" ng-click="ok()">OK</button>
+        <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
+    </div>
 
 </div>
