--- a/src/main/webapp/WEB-INF/ui/views/datasource/edit.html
+++ b/src/main/webapp/WEB-INF/ui/views/datasource/edit.html
@@ -1,13 +1,16 @@
-<div ng-controller="DataSourceCreateController">
-    <div class="modal-header">
-        <h3 style="">Datový zdroj</h3>
-    </div>
-    <div class="modal-body ">
-        <div>
-            <form novalidate class="form-horizontal" ng-submit="save()" name="dataSource"  >
-                <div class="row">
+<div class="row">
+    <div class="container"> </div>
+    <div ng-controller="DataSourceCreateController">
+        <div class="modal-header">
+            <h3 style="">Datový zdroj</h3>
+        </div>
+        <div class="modal-body ">
+            <div>
+
+                <form novalidate class="form-horizontal" ng-submit="save()" name="dataSource"  >
+
                     <div class="col-md-2">
-                        <input type="hidden" ng-model="DataSource.id" id="id" name="id" />
+                        <input type="hidden" ng-model="DataSource.id" interpol-model="id" server-error="id" name="id"/>
 
                         <div class="form-group">
                             <label class="control-label" for="name">Název</label>
@@ -34,31 +37,43 @@
 
 
                     </div>
+                      </form>
                     <div class="col-md-10">
-                        <div class="form-group">
-                            <input type="file" ng-model="files" file-change id="file" >
-                            <div ng-show="loadingfile">
-                                Loading...
+                        <div class="row">
+                            <div col-md-5 >
+                                <div class="form-group">
+                                    <input type="file" ng-model="files" file-change id="file" >
+
+                                </div>
+                            </div>
+                           <div col-md-5 >
+                                <div ng-show="loadingfile">
+                                    <img src="img/ajax-loader.gif" width="220" height="19" alt="ajax-loader"/>
+
+                                </div>
                             </div>
                         </div>
-                                           <h4 style="">Náhled dat</h4>
-                        <table class="table table-striped table-condensed table-bordered" style="font-size: 0.9em;">
-                            <thead>
-                            <th ng-repeat="f in DataSource.dataStructure.dataStructureFields">
-                                {{f.name}}
-                            </th>
-                            </thead>
 
-                            <tr ng-repeat="row in DataSource.dataStructure.previewRows" >
-                                <td ng-repeat="field in row.dataSourceFields" >
-                                    {{ field.value | format : DataSource.dataStructure.dataStructureFields[field.index].dataType }}
-                                </td>
-                            </tr>
-                        </table>
-                    </div>
-                </div>
+        
+                           <div class="row">
+                <h4 style="">Náhled dat</h4>
+                <table class="table table-striped table-condensed table-bordered" style="font-size: 0.9em;">
+                    <thead>
+                    <th ng-repeat="f in DataSource.dataStructure.dataStructureFields">
+                        {{f.name}}
+                    </th>
+                    </thead>
 
-            </form>
+                    <tr ng-repeat="row in DataSource.dataStructure.previewRows" >
+                        <td ng-repeat="field in row.dataSourceFields" >
+                            {{ field.value | format : DataSource.dataStructure.dataStructureFields[field.index].dataType }}
+                        </td>
+                    </tr>
+                </table>
+                           </div>
+            </div>
+
+
         </div>
 
 
@@ -76,4 +91,5 @@
         <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
     </div>
 
+</div>
 </div>
