--- a/src/main/webapp/WEB-INF/ui/views/datasource/list.html
+++ b/src/main/webapp/WEB-INF/ui/views/datasource/list.html
@@ -1,25 +1,42 @@
-<h2>
-    Zdroje dat <a class="btn btn-primary pull-right" ng-click="openForm()"><i
-            class="icon-plus-sign icon-white"></i> Nový zdroj</a>
-</h2>
-<table class="table table-striped">
-    <tr ng-repeat="d in datasources" >
-        <td>{{d.name}}</td><td>
-            <div class="btn-group">
-                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-                    Action <span class="caret"></span>
-                </button>
-                <ul class="dropdown-menu" >
-                    <li><a href="#">Email</a></li>
-                    <li><a href="#">Dopis</a></li>
-                    <li><a ng-click="openForm(d.id)"  >Upravit</a></li>
-                    <li class="divider"></li>
-                    <li><a ng-click="openDeleteDialog(d.id, d.name)" >Smazat</a></li>
-                </ul>
-            </div>
-        </td>
-    </tr>
-</table>
+<div class="col-md-8">
 
 
+    <h2>
+        Zdroje dat <a class="btn btn-primary pull-right" ng-click="openForm()"><i class="icon-plus-sign icon-white"></i> Nový zdroj</a>
+    </h2>
+    <table  class="table table-striped table-condensed table-bordered"  >
+        <thead>
+        <th>
+            Název
+        </th>
+        <th>
+            Počet záznamů
+        </th>
+        <th class="text-right">
+            Akce
+        </th>
+        </thead>
+        <tbody>
+            <tr ng-repeat="d in datasources" >
+                <td>{{d.name}}</td>
+                <td>{{d.recordsCount}}</td>
+                <td class="text-right">
+                    <div class="btn-group text-left">
+                        <button type="button" class="btn btn-warning dropdown-toggle" data-toggle="dropdown">
+                            Action <span class="caret"></span>
+                        </button>
+                        <ul class="dropdown-menu" >
+                            <li><a href="#">Email</a></li>
+                            <li><a href="#">Dopis</a></li>
+                            <li><a ng-click="openForm(d.id)"  >Upravit</a></li>
+                            <li class="divider"></li>
+                            <li><a ng-click="openDeleteDialog(d.id, d.name)" >Smazat</a></li>
+                        </ul>
+                    </div>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+
+</div>
 
