--- a/src/main/webapp/WEB-INF/ui/views/datasource/list.html
+++ b/src/main/webapp/WEB-INF/ui/views/datasource/list.html
@@ -28,6 +28,7 @@
                         <ul class="dropdown-menu" >
                             <li><a href="#">Email</a></li>
                             <li><a href="#">Dopis</a></li>
+                            <li><a ng-click="openBrowse(d.id)"  >Zobrazit data</a></li>
                             <li><a ng-click="openForm(d.id)"  >Upravit</a></li>
                             <li class="divider"></li>
                             <li><a ng-click="openDeleteDialog(d.id, d.name)" >Smazat</a></li>
