--- a/src/main/webapp/WEB-INF/ui/views/campain/browse.html
+++ b/src/main/webapp/WEB-INF/ui/views/campain/browse.html
@@ -1,6 +1,6 @@
 
 <div class="modal-header">
-            <h3 style="">Datový zdroj</h3>
+            <h3 style="">Kampaně</h3>
         </div>
         <div class="modal-body ">
             <div class="row">
