--- a/src/main/webapp/WEB-INF/ui/views/datasource/browse.html
+++ b/src/main/webapp/WEB-INF/ui/views/datasource/browse.html
@@ -1,32 +1,44 @@
 
 <div class="modal-header">
-            <h3 style="">Datový zdroj</h3>
-        </div>
-        <div class="modal-body ">
-            <div class="row">
-                <h4 style="">Náhled dat</h4>
-                <table class="table table-striped table-condensed table-bordered" style="font-size: 0.9em;">
-                    <thead>
+    <h3 style="">Datový zdroj</h3>
+</div>
+<div class="modal-body ">
+    <div class="row">
+        <h4 style="">Náhled datového zdroje</h4>
+        <table class="table table-striped table-condensed table-bordered" style="font-size: 0.9em;">
+            <thead>
+                            <tr>
+                <th ng-repeat="f in DataSource.dataStructure.dataStructureFields">
+                    {{f.name}}</th>
+            </tr>
+                <tr>
                     <th ng-repeat="f in DataSource.dataStructure.dataStructureFields">
-                        <input on-enter-blur on-blur-change="search(f)" ng-indexname="f.index"  ng-model="f.searchString" type="text" />
-                        {{f.name}}
-                    </th>
-                    </thead>
+            <div class="input-group">
+                <input class="form-control" placeholder="Search"  on-enter-blur on-blur-change="search(f)"  ng-indexname="f.index"  ng-model="f.searchString" type="text" />
+                <div class="input-group-btn">
+                    <button class="btn btn-default"  ng-click="search()" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                </div>
+            </div>
+       
+            </th>
+            </tr> 
 
-                    <tr ng-repeat="row in dataSourceRows" >
-                        <td ng-repeat="field in row.dataSourceFields" >
-                            {{ field.value | format : DataSource.dataStructure.dataStructureFields[field.index].dataType }}
-                        </td>
-                    </tr>
-                </table>
-  
-           <pagination total-items="DataSource.recordsCount" page="currentPage" on-select-page="paginate(page-1)" ></pagination>
-    
-               </div>
+            </thead>
+
+            <tr ng-repeat="row in dataSourceRows" >
+                <td ng-repeat="field in row.dataSourceFields" >
+                    {{ field.value | format : DataSource.dataStructure.dataStructureFields[field.index].dataType }}
+                </td>
+            </tr>
+        </table>
+{{DataSource.recordsCount}}
+        <pagination  max-size = "10" total-items="DataSource.recordsCount" page="currentPage" on-select-page="paginate(page-1)" ></pagination>
 
     </div>
 
-    <div class="modal-footer">
-        <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
-    </div>
+</div>
+
+<div class="modal-footer">
+    <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
+</div>
 
