--- a/src/main/webapp/WEB-INF/ui/views/datasource/list.html
+++ b/src/main/webapp/WEB-INF/ui/views/datasource/list.html
@@ -1,56 +1,64 @@
-<div class="row">
-<h3>Zdroje dat</h3>
-    <div class="col-md-8" >
-       <a class="btn btn-primary pull-right" ng-click="openForm()"><i class="icon-plus-sign icon-white"></i> Nový zdroj</a>
-    </div>
-</div>
-<div class="row">
-    <div class="col-md-8" >
- <table  class="table table-condensed"  >
-       <thead>
- 
-        <tr>
-        <th>
-            Název
-            <input on-enter-blur on-blur-change="search()" ng-indexname="f.index"  ng-model="f.searchString" type="text" />
-        </th>
-        <th>
-            Počet záznamů
-        </th>
-        <th class="text-right">
-            Akce
-        </th>
-        </tr>
-       </thead><tfoot>
-           <tr><td colspan="3">
-                        <pagination total-items="DataSource.recordsCount" page="currentPage" on-select-page="paginate(page-1)" ></pagination>
-               </td>
-           </tr>
-       </tfoot>
-        <tbody>
-            <tr ng-repeat="d in datasources" >
-                <td>{{d.name}}</td>
-                <td>{{d.recordsCount}}</td>
-                <td class="text-right">
-                    <div class="btn-group text-left">
-                        <button type="button" class="btn btn-warning dropdown-toggle" data-toggle="dropdown">
-                            Action <span class="caret"></span>
-                        </button>
-                        <ul class="dropdown-menu" >
-                            <li><a href="#">Email</a></li>
-                            <li><a href="#">Dopis</a></li>
-                            <li><a ng-click="openBrowse(d.id)"  >Zobrazit data</a></li>
-                            <li><a ng-click="openForm(d.id)"  >Upravit</a></li>
-                            <li class="divider"></li>
-                            <li><a ng-click="openDeleteDialog(d.id, d.name)" >Smazat</a></li>
-                        </ul>
-                    </div>
-                </td>
-            </tr>
-        </tbody>
 
-    </table>
-    
-<div>
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <h3 class="panel-title">Datové zdroje</h3>
+  </div>
+  <div class="panel-body">
+    <div class="col-md-10" >
+        <table  class="table table-striped table-condensed"  >
+            <thead><tr>
+                    <th>Název </th>
+            <th>Počet záznamů</th>
+            <th class="text-right">Akce</th>
+            </tr>
+                <tr>
+              <th><div class="input-group">
+                <input class="form-control" placeholder="Search"  on-enter-blur on-blur-change="search()"  ng-indexname="f.index"  ng-model="f.searchString" type="text" />
+                <div class="input-group-btn">
+                    <button class="btn btn-default"  ng-click="search()" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                </div>
+            </div></th>
+            <th></th>
+            <th class="text-right">
+ <a class="btn btn-primary btn-sm pull-right" ng-click="openForm()"><i class="icon-plus-sign icon-white"></i> Nový zdroj</a>
+            </th>
+            </tr>
+            </thead><tfoot>
+                <tr><td colspan="3">
+            <pagination total-items="DataSource.recordsCount" page="currentPage" on-select-page="paginate(page-1)" ></pagination>
+            </td>
+            </tr>
+            </tfoot>
+            <tbody>
+                <tr ng-repeat="d in datasources" >
+                    <td>{{d.name}}</td>
+                    <td>{{d.recordsCount}}</td>
+                    <td class="text-right">
+                        <div class="btn-group text-left">
+                            <button type="button" class="btn btn-sm btn-warning dropdown-toggle" data-toggle="dropdown">
+                                Action <span class="caret"></span>
+                            </button>
+                            <ul class="dropdown-menu" >
+                                <li><a href="#">Email</a></li>
+                                <li><a href="#">Dopis</a></li>
+                                <li><a ng-click="openBrowse(d.id)"  >Zobrazit data</a></li>
+                                <li><a ng-click="openForm(d.id)"  >Upravit</a></li>
+                                <li class="divider"></li>
+                                <li><a ng-click="openDeleteDialog(d.id, d.name)" >Smazat</a></li>
+                            </ul>
+                        </div>
+                    </td>
+                </tr>
+            </tbody>
+
+        </table>
+
+        <div>
+        </div>
+    </div>
+
+  </div>
 </div>
-</div>
+
+
+
