--- a/src/main/webapp/WEB-INF/ui/views/campain/edit.html
+++ b/src/main/webapp/WEB-INF/ui/views/campain/edit.html
@@ -17,23 +17,30 @@
             </div>  
 
             <div class="form-group">
-                <label class="control-label" for="dataSourceId">Datový zdroj</label>
-                <input class="form-control"  type="text" id = "dataSourceId" name="dataSourceId" ng-model="Campain.dataSourceId"  interpol-model="dataSourceId" server-error="dataSourceId"/>
+                <input class="form-control"  type="hidden" id = "dataSourceId" name="dataSourceId" ng-model="Campain.dataSourceId"  interpol-model="dataSourceId" server-error="dataSourceId"/>
                 
-                    <pre>Model: {{asyncSelected | json}}</pre>
-    <input type="text" ng-model="asyncSelected" placeholder="Vyhledat datový zdroj" typeahead-loading="loadingLocations"  typeahead="address for address in searchDataSources($viewValue) | filter:$viewValue" class="form-control">
+                    <pre>Datový zdroj: {{datasourceSelected.name}}</pre>
+
+    <input type="text" ng-model="datasourceSelected" placeholder="Vyhledat datový zdroj" typeahead-loading="loadingLocations"  typeahead="datasource as datasource.name for datasource in searchDataSources($viewValue) | filter:{name: $viewValue}"  typeahead-on-select="onDatasourceSelected($item)" class="form-control">
     <i ng-show="loadingLocations" class="glyphicon glyphicon-refresh"></i>
 
                 <div class="errors"  show-inter="dataSourceId" >
                     <error-message error="dataSourceId" ></error-message>   
                 </div>
+
             </div>  
+            <textarea cols="60" id="rr" rows="30" >
+               
+            </textarea>
         </form>
+        
     </div>
 
     <div class="modal-footer">
         <button class="btn btn-primary" ng-click="ok()">OK</button>
         <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
     </div>
-</div>
+   <script src="js/nicEdit.js"></script>
 
+
+</div>
