--- a/src/main/webapp/WEB-INF/ui/views/campain/edit.html
+++ b/src/main/webapp/WEB-INF/ui/views/campain/edit.html
@@ -130,10 +130,14 @@
                                 </div>
                             </div>
                             <div>
-  
-                            </div>
+                <h3 style="margin-top: 0;">Dostupné proměné</h3>
+                    <p ng-repeat="f in templateFields">
 
-                    </div>
+                        ###{{f}}###
+                    </p>
+                            </div>
+               <iframe src="../template/pdfpreview/ss/dd" width="400px" height="300px" />
+                  </div>
                 </tab>
 
             </tabset>
